--- a/family/family.html
+++ b/family/family.html
@@ -116,7 +116,7 @@ body {
         </a>
         </th>
         <th>
-        	 <a href="http://www.flickr.com/masakowskiphotography" target="new">
+        	 <a href="http://www.martinmasakowski.com" target="new">
         <img src="martin.jpg" onmouseover="this.src='martin_hover.jpg';" onmouseout="this.src='martin.jpg';" />
         </a>
         </th>
