--- a/EPK/index.html
+++ b/EPK/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Steve Masakowski - Two Worlds</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <section class="hero">
+    <div class="content">
+      <h1>Steve Masakowski</h1>
+      <h2>Family & Friends</h2>
 
+      <p class="intro">
+        Steve Masakowski, the patriarch of one of New Orleans’s great multigenerational jazz families, proudly announces the spring 2026 release of
+        <em>Two Worlds</em>, featuring:
+      </p>
+
+      <ul class="musicians">
+        <li><strong>Steve Masakowski</strong>, guitar</li>
+        <li><strong>Sasha Masakowski</strong>, vocals</li>
+        <li><strong>Martin Masakowski</strong>, bass</li>
+        <li><strong>Brian Blade</strong>, drums</li>
+        <li><strong>Oscar Rossignoli</strong>, piano</li>
+        <li><strong>Rex Gregory</strong>, sax</li>
+      </ul>
+
+      <p class="credits">
+        Recorded by <strong>Mack Major</strong> at Marigny Studios in New Orleans<br>
+        Mixed and Mastered by <strong>Mike Marciano</strong>, Systems Two NYC<br>
+        Artwork by <strong>Ulrike Maria Masakowski</strong>
+      </p>
+
+      <p class="release">To be released March 6, 2026</p>
+
+      <a href="#" class="listen-button">Click here to listen</a>
+
+      <p class="footer">Page 1 of 5 &nbsp; | &nbsp; Press right &gt; to continue</p>
+    </div>
+
+    <div class="image-side">
+      <img src="album-cover.jpg" alt="Album cover" class="album-cover">
+      <img src="steve.jpg" alt="Steve Masakowski" class="artist-photo">
+    </div>
+  </section>
+</body>
+</html>
