--- a/EPK/index.html
+++ b/EPK/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="image-side">
-      <img src="album-cover.jpg" alt="Album cover" class="album-cover">
+      <img src="album_cover.jpg" alt="Album cover" class="album_cover">
       <img src="steve.jpg" alt="Steve Masakowski" class="artist-photo">
     </div>
   </section>
