--- a/EPK/index.html
+++ b/EPK/index.html
@@ -41,7 +41,7 @@
 
     <div class="image-side">
       <img src="album_cover.jpg" alt="Album cover" class="album_cover">
-      <img src="steve.jpg" alt="Steve Masakowski" class="artist-photo">
+      <img src="Steve_Home_background.jpg" alt="Steve Masakowski" class="artist-photo">
     </div>
   </section>
 </body>
