--- a/EPK/index.html
+++ b/EPK/index.html
@@ -40,8 +40,8 @@
     </div>
 
     <div class="image-side">
-      <img src="album_cover.jpg" alt="Album cover" class="album_cover">
-      <img src="Steve_Home_background.jpg" alt="Steve Masakowski" class="artist-photo">
+      <img src="images/album_cover.jpg" alt="Album cover" class="album_cover">
+      <img src="images/Steve_Home_background.jpg" alt="Steve Masakowski" class="artist-photo">
     </div>
   </section>
 </body>
