--- a/EPK/index.html
+++ b/EPK/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="image-side">
-      <img src="images/album_cover.jpg" alt="Album cover" class="album_cover">
+      <img src="images/album_cover.jpeg" alt="Album cover" class="album_cover">
       <img src="images/Steve_Home_background.jpg" alt="Steve Masakowski" class="artist-photo">
     </div>
   </section>
