--- a/EPK/index.html
+++ b/EPK/index.html
@@ -6,6 +6,7 @@
   <title>Steve Masakowski - Two Worlds</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <section class="hero">
     <div class="content">
@@ -14,7 +15,7 @@
 
       <p class="intro">
         Steve Masakowski, the patriarch of one of New Orleans’s great multigenerational jazz families, proudly announces the spring 2026 release of
-        <em>Two Worlds</em>, featuring:
+        <strong>Two Worlds</strong>, featuring:
       </p>
 
       <ul class="musicians">
@@ -38,11 +39,19 @@
 
       <p class="footer">Page 1 of 5 &nbsp; | &nbsp; Press right &gt; to continue</p>
     </div>
-
-    <div class="image-side">
-      <img src="images/album_cover.jpeg" alt="Album cover" class="album_cover">
-      <img src="images/Steve_Home_background.jpg" alt="Steve Masakowski" class="artist-photo">
-    </div>
+<div class="image-side">
+  <img src="images/Steve.JPG" alt="Steve Masakowski" class="artist-photo">
+</div>
+<div class="album-cover">
+  <img src="images/album_cover.jpeg" alt="Album cover" class="album_cover">
+</div>
   </section>
+
+  <!-- Optional Audio Player -->
+  <!--
+  <div class="audio-player">
+    <audio controls src="audio/Two_Worlds_Sample.mp3"></audio>
+  </div>
+  -->
 </body>
 </html>
