--- a/EPK/index.html
+++ b/EPK/index.html
@@ -69,22 +69,22 @@
   <!-- Track list (vertical) -->
 <div class="track-list-container">
   <ul class="track-list">
-    <li data-src="audio/01 Two Worlds.wav" data-title="Two Worlds">01 - Two Worlds</li>
-    <li data-src="audio/02 Ya Know They Know.wav" data-title="Ya Know They Know">02 - Ya Know They Know</li>
-    <li data-src="audio/03 Origin of Sin.wav" data-title="Origin of Sin">03 - Origin of Sin</li>
-    <li data-src="audio/04 A Love Song.wav" data-title="A Love Song">04 - A Love Song</li>
-    <li data-src="audio/05 Las Sonrisas del Mar.wav" data-title="Las Sonrisas del Mar">05 - Las Sonrisas del Mar</li>
-    <li data-src="audio/06 Sweet Dreams.wav" data-title="Sweet Dreams">06 - Sweet Dreams</li>
-    <li data-src="audio/07 Shine.wav" data-title="Shine">07 - Shine</li>
-    <li data-src="audio/08 North Wind (intro).wav" data-title="North Wind (Intro)">08 - North Wind (Intro)</li>
-    <li data-src="audio/09 North Wind.wav" data-title="North Wind">09 - North Wind</li>
+    <li data-src="audio/01 Two Worlds.mp3" data-title="Two Worlds">01 - Two Worlds</li>
+    <li data-src="audio/02 Ya Know They Know.mp3" data-title="Ya Know They Know">02 - Ya Know They Know</li>
+    <li data-src="audio/03 Origin of Sin.mp3" data-title="Origin of Sin">03 - Origin of Sin</li>
+    <li data-src="audio/04 A Love Song.mp3" data-title="A Love Song">04 - A Love Song</li>
+    <li data-src="audio/05 Las Sonrisas del Mar.mp3" data-title="Las Sonrisas del Mar">05 - Las Sonrisas del Mar</li>
+    <li data-src="audio/06 Sweet Dreams.mp3" data-title="Sweet Dreams">06 - Sweet Dreams</li>
+    <li data-src="audio/07 Shine.mp3" data-title="Shine">07 - Shine</li>
+    <li data-src="audio/08 North Wind (intro).mp3" data-title="North Wind (Intro)">08 - North Wind (Intro)</li>
+    <li data-src="audio/09 North Wind.mp3" data-title="North Wind">09 - North Wind</li>
   </ul>
 </div>
 
 <!-- Fixed bottom audio player -->
 <div class="audio-player">
   <audio id="epk-audio" controls>
-    <source src="audio/01 Two Worlds.wav" type="audio/wav">
+    <source src="audio/01 Two Worlds.mp3" type="audio/wav">
   </audio>
   <div id="current-track">Now playing: Two Worlds</div>
 </div>
