--- a/EPK/index.html
+++ b/EPK/index.html
@@ -59,10 +59,11 @@
   </div>
 
   <div class="content">
-    <h2>"The Masakowski Family stands at the heart of New Orleans' modern jazz scene, carrying forward a rich tradition
-        of musical innovation and artistry across generations."<br>
-        <em>-OffBeat Magazine</em>"
-    </h2>
+  <h2 class="section2-quote">
+    "The Masakowski Family stands at the heart of New Orleans' modern jazz scene, carrying forward a rich tradition of musical innovation and artistry across generations."<br>
+    <em>-OffBeat Magazine</em>
+  </h2>
+</div>
 
     
 
