Add video section with embedded YouTube player

--- a/EPK/index.html
+++ b/EPK/index.html
@@ -105,6 +105,42 @@
 
 
 
+<!-- ======= Video Section ======= -->
+<!-- ======= Video Section ======= -->
+<section class="video-section" id="video-section">
+  <div class="video-content">
+    <h2>Two Worlds</h2>
+    <p>
+      Patriarch <strong>Steve Masakowski</strong> has been a central figure in New Orleans jazz since the early 1980s.
+      A celebrated guitarist, composer, and founding member of the award-winning group Astral Project, 
+      he has released numerous recordings, including two on Blue Note Records, and has twice been named “Best Guitarist” by Gambit and Offbeat. 
+      Steve has performed with legends such as Alvin “Red” Tyler, Ellis Marsalis, Danny Barker, James Black, and Earl Turbinton, as well as 
+      Grammy-winning artists Bobby McFerrin, Nicholas Payton, Allen Toussaint, and Dianne Reeves. For nearly 30 years, he served as the Coca-Cola Endowed Chair 
+      of Jazz Studies at the University of New Orleans, mentoring generations of musicians while publishing influential works, including Jazz Ear Training (Mel Bay).<br>
+      <br>
+      
+    </p>
+  </div>
+
+  <div class="video-embed">
+    <div class="video-container">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/8cHEu6zJVeo"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </div>
+</section>
+
+
+
+
+
 <!-- ======= JavaScript ======= -->
 <script>
   // === Elements ===
