Enhance index.html with social media metadata
Added Open Graph and Twitter Card metadata for social media sharing.

--- a/EPK/index.html
+++ b/EPK/index.html
@@ -5,6 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Steve Masakowski - Two Worlds</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- ===== Social Media Preview (Open Graph + Twitter) ===== -->
+<meta property="og:title" content="Steve Masakowski — Two Worlds EPK">
+<meta property="og:description" content="Explore the new album 'Two Worlds' by Steve Masakowski, featuring Sasha and Martin Masakowski. Listen, learn, and connect.">
+<meta property="og:image" content="https://steve-masakowski.com/images/album_cover.jpeg">
+<meta property="og:url" content="https://steve-masakowski.com/EPK/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card (for sharing on X/Twitter) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Steve Masakowski — Two Worlds EPK">
+<meta name="twitter:description" content="Explore the new album 'Two Worlds' by Steve Masakowski, featuring Sasha and Martin Masakowski.">
+<meta name="twitter:image" content="https://steve-masakowski.com/images/album_cover.jpeg">
+
+<!-- Favicon (optional, shows in browser tabs) -->
+<link rel="icon" type="image/jpeg" href="/images/album_cover.jpeg">
 </head>
 
 <body>
