Update HTML structure and fix formatting issues

--- a/EPK/index.html
+++ b/EPK/index.html
@@ -20,6 +20,7 @@
 
 <!-- Favicon (optional, shows in browser tabs) -->
 <link rel="icon" type="image/jpeg" href="/images/album_cover.jpeg">
+
 </head>
 
 <body>
@@ -261,14 +262,14 @@
         Together, the Masakowski Family has gained international acclaim as one of the leading jazz families in America, 
         and toured throughout Europe and North Africa in recent years.
       </p>
-      <p>
+      
         <div class="section5-cta">
-  <p><strong>Exclusive Access:</strong> <br> Join the Waitlist for Early Album Updates.</p>
-  <a class="join-button" href="https://linktr.ee/masakowski_family_and_friends" target="_blank">Join Now</a>
-  <p>For more, visit: <br> 
+  <strong>Exclusive Access:</strong> <br> Join the Waitlist for Early Album Updates.<br>
+  <a class="join-button" href="https://linktr.ee/masakowski_family_and_friends" target="_blank">Join Now</a><br>
+  For more, visit: <br> 
     <a href="https://www.steve-masakowski.com" target="_blank">www.steve-masakowski.com</a> <br>
     <a href="https://www.sashamasakowski.com" target="_blank">www.sashamasakowski.com</a>
-  </p>
+  
 </div>
       </p>
     </div>
